[package]
name = "hiwonder"
version = "0.2.3"
readme = "README.md"
description = "Interface for interacting with Hiwonder IMUs"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialport = { version = "4.2.0", default-features = false }

[lib]

name = "hiwonder"
crate-type = ["rlib"]
